--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./output/src/assets/index.css" />
-  <title>create-melange-app</title>
+  <title>Create-Melange-App</title>
 </head>
 
-<body>
-  <div id="root" class="flex h-screen w-screen flex-col items-center  bg-gradient-to-b from-[#24273a] to-[#181926]">
-    <!-- This path is relative to the _build/default directory  -->
-    <script type="module" src="./output/src/App.mjs"></script>
+<body id="root" class="flex h-screen w-screen flex-col items-center  bg-gradient-to-b from-[#24273a] to-[#181926]">
+  <!-- This path is relative to the _build/default directory  -->
+  <script type="module" src="./output/src/App.mjs"></script>
 </body>
 
 </html>
