--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <title>Create-Melange-App</title>
 </head>
 
-<body id="root" class="flex h-screen w-screen flex-col items-center  bg-gradient-to-b from-[#24273a] to-[#181926]">
+<body id="root" class="min-h-screen bg-ctp-base">
   <!-- This path is relative to the _build/default directory  -->
+
   <script type="module" src="./output/src/App.mjs"></script>
+
 </body>
 
 </html>
