--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Create-Melange-App</title>
 </head>
 
-<body id="root" class="min-h-screen bg-ctp-base text-ctp-text">
+<body id="root" class="min-h-screen bg-ctp-base text-ctp-rosewater">
   <!-- This path is relative to the _build/default directory  -->
 
   <script type="module" src="./output/src/App.mjs"></script>
